--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,30 @@
 }
 
 .App-header {
+  /* height: 64px; */
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.photo{
+  height: 54px;
+  width: 48px;
+  margin: 8px;
+  border-radius: 4px;
+}
+.in-logo{
+  height: 54px;
+  margin: 8px;
+}
 
+.App-main {
+  background-color: beige;
+
+}
 .App-link {
   color: #61dafb;
 }
